# luxor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_CN.md  Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/luxor/: Cargo.toml
crates/luxor/benches/: comprehensive_bench.rs  render_bench.rs
crates/luxor/examples/: README.md  align.rs  alt_screen.rs  highlighter.rs  justify.rs  markup.rs  overflow.rs  progress.rs  rainbow.rs  rule.rs  showcase.rs  spinners.rs  styles.rs  wave.rs
crates/luxor/src/: animation.rs  ansi.rs  box_drawing.rs  color.rs  console.rs  error.rs  layout.rs  lib.rs  markup.rs  measure.rs  protocol.rs  segment.rs  style.rs  text.rs
crates/luxor/src/components/: mod.rs  rule.rs
crates/luxor/tests/: animation_tests.rs  box_drawing_tests.rs  components_tests.rs  integration_tests.rs  layout_tests.rs  property_tests.proptest-regressions  property_tests.rs
